Move ode comparison to demos directory

--- a/demos/compare_ode_solvers.html
+++ b/demos/compare_ode_solvers.html
@@ -6,8 +6,8 @@
     <title>Compare models</title>
     <script type="text/javascript" src="../flot/jquery.js"></script>
     <script type="text/javascript" src="../flot/jquery.flot.js"></script>
-    <script type="text/javascript" src=../ode.js></script>
-    <script type="text/javascript" src=../demos/systems.js></script>
+    <script type="text/javascript" src="../lib//ode.js"></script>
+    <script type="text/javascript" src="systems.js"></script>
     <script type="text/javascript">
         nAn_ode_module.apply(this);
         demo_systems_module.apply(this);
