--- a/demos/stochastic_test.html
+++ b/demos/stochastic_test.html
@@ -20,26 +20,31 @@
 </body>
 <script type="text/javascript">
 
-    var t, N, x, xdot, d1, d2, d3
+    var t, N, x, y, xdot, d;
 
-    var plot_trail = function (sol1) {
+    var plot_trail = function (sol1,index) {
         t = sol1[0];
         N = sol1[2];
-        x1 = sol1[1].subarray(0, N);
-        d1 = []; 
+        var k = index || 0;
+        x = sol1[1].subarray(k*N, (k+1)*N);
+        d = []; 
         for (i = 0; i < N; i++) {
-            d1[i] = [t[i], x1[i]];
+            d[i] = [t[i], x1[i]];
         }
         $.plot("#plotarea", [d1]);
     }
 
-    var toy_A = function(y,t,params) {
-        return [0];
-    };
-    
-    var toy_D = function(y,t,params) {
-        return [params[0]]
-    };
+    var plot_phase = function (sol) {
+        t = sol[0];
+        N = t.length;
+        x = sol[1].subarray(0,N);
+        y = sol[1].subarray(N,2*N);
+        d = [];
+        for (i=0; i<N; i++) {
+            d[i] = [ x[i],y[i] ];
+        }
+        $.plot("#plotarea",[d]);
+    }
 
 </script>
 
