--- a/demos/stochastic_test.html
+++ b/demos/stochastic_test.html
@@ -29,9 +29,9 @@
         x = sol1[1].subarray(k*N, (k+1)*N);
         d = []; 
         for (i = 0; i < N; i++) {
-            d[i] = [t[i], x1[i]];
+            d[i] = [t[i], x[i]];
         }
-        $.plot("#plotarea", [d1]);
+        $.plot("#plotarea", [d]);
     }
 
     var plot_phase = function (sol) {
