Add require.js to demos so that it doesn't need to be installed first.

--- a/demos/compare_ode_solvers.html
+++ b/demos/compare_ode_solvers.html
@@ -6,7 +6,7 @@
     <title>Compare models</title>
     <script type="text/javascript" src="../flot/jquery.js"></script>
     <script type="text/javascript" src="../flot/jquery.flot.js"></script>
-    <script src="../node_modules/requirejs/require.js"></script>
+    <script src="require.js"></script>
 </head>
 <body>
     <p id="status"></p>
