--- a/demos/load_libraries.html
+++ b/demos/load_libraries.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Compare models</title>
-    <script src="../node_modules/requirejs/require.js"></script>
+    <script src="require.js"></script>
 </head>
 <body>
 <h1 id="status">Libraries are loaded for use in console</h1>
